# blight

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  README.md  rustfmt.toml
.cargo/: mutants.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/setup-blight-llvm/: action.yml
.github/workflows/: ci.yml  coverage.yml  fuzz.yml  mechanization.yml  mutants.yml  pages.yml  quickstart.yml  release.yml
bench/: check_regress.py  game.sh  goldens.sh  multicore.sh  run.sh
bench/games/_baseline/: baseline.c  baseline.hs  baseline.ml  baseline.py  baseline.rs  baseline_int.bl
bench/games/binrec/: binrec.c  binrec.hs  binrec.ml  binrec.py  binrec.rs  binrec_int.bl
bench/games/factorial/: factorial.c  factorial.hs  factorial.ml  factorial.py  factorial.rs  factorial_int.bl  factorial_nat.bl
crates/blight-codegen/: Cargo.toml
crates/blight-codegen/benches/: pipeline.rs  runtime.rs
crates/blight-codegen/runtime/: arena.c  blight_rt.h  boxed_array.c  delay.c  effects.c  gc.c  graphics.c  numeric.c  prelude_rt.c  serialize.c  stack.c  wasm_rt.c  worker.c
crates/blight-codegen/runtime/tests/: arena_test.c  effects_test.c  f64_test.c  float_diff.c  gc_diff.c  gc_test.c  graphics_test.c  mobility_pingpong.c  mobility_test.c  multicore_test.c  numeric_diff.c  rc_diff.c  runtime_test.c  serialize_bench.c  serialize_test.c  string_diff.c  string_test.c  worker_bench.c  worker_code_test.c  worker_test.c
crates/blight-codegen/src/: anf.rs  autopar.rs  capspec.rs  cfa.rs  closure.rs  cse.rs  ctnorm.rs  defunc.rs  driver.rs  elimloop.rs  elimworklist.rs  flatten.rs  fusion.rs  inline.rs  ir.rs  layout.rs  lib.rs  linearity.rs  llvm.rs  lower.rs  mono.rs  recognize.rs  region.rs  runtime.rs  unbox.rs
crates/blight-codegen/tests/: grade0_absent.rs  wasm_exec.rs
crates/blight-elab/: Cargo.toml
crates/blight-elab/src/: defn.rs  diagnostic.rs  docs.rs  elab.rs  fmt.rs  infer.rs  lib.rs  macros.rs  measure.rs  meta.rs  mutual.rs  pretty.rs  program.rs  records.rs  registry.rs  scope.rs  sexpr.rs  spores.rs  stepper.rs  surface.rs  tactic.rs
crates/blight-elab/tests/: diagnostics.rs  fmt_corpus.rs  literals.rs  parse_negative.rs  proptest_reader.rs
crates/blight-kernel/: Cargo.toml
crates/blight-kernel/src/: check.rs  context.rs  erase.rs  kan.rs  lib.rs  normalize.rs  proof.rs  row.rs  semiring.rs  signature.rs  term.rs  usage.rs  value.rs
crates/blight-kernel/tests/: proptest_nbe.rs
crates/blight-lsp/: Cargo.toml
crates/blight-lsp/src/: main.rs
crates/blight-lsp/tests/: lsp_protocol.rs
crates/blight-net/: Cargo.toml  default_9666987391192319353_0_11218.profraw  default_9666987391192319353_0_11220.profraw  default_9666987391192319353_0_55488.profraw  default_9666987391192319353_0_55495.profraw  default_9666987391192319353_0_7522.profraw  default_9666987391192319353_0_7529.profraw
crates/blight-net/examples/: pingpong.rs
crates/blight-net/src/: lib.rs
crates/blight-net/tests/: pingpong_process.rs
crates/blight-playground/: Cargo.toml
crates/blight-playground/src/: lib.rs
crates/blight-playground/tests/: smoke.rs
crates/blight-prelude/: modules.bl  plus_zero_tac.bl  regions.bl  spore.bl  spore_codegen_meta.bl  spore_compile.bl  spore_dep.bl  spore_elab.bl  spore_intrinsic.bl  spore_meta.bl  spore_pipeline.bl  spore_print.bl  spore_reader.bl  tactics.bl  traits.bl
crates/blight-prelude-embed/: Cargo.toml
crates/blight-recheck/: Cargo.toml
crates/blight-recheck/src/: conv.rs  kan.rs  lib.rs  normalize.rs  term.rs  typecheck.rs  value.rs
crates/blight-recheck/tests/: differential.rs  level_parity.rs  negative.rs  properties.rs  proptest_differential.rs  recheck.rs
crates/blight-repl/: Cargo.toml
crates/blight-repl/src/: main.rs  prelude_embed.rs
crates/blight-repl/tests/: coverage.rs  defn.rs  dependent_let_match.rs  effects.rs  examples.rs  first_session.rs  grading.rs  implicits.rs  kan_conformance.rs  kan_open_family.rs  literals.rs  measure.rs  mutual.rs  nbe_scaling.rs  oracle.rs  plus_zero.rs  records.rs  regions.rs  spore.rs  spores.rs  stdlib.rs  tactics.rs  tower.rs  ua_transp_soundness.rs  verdict_diff.rs  version.rs
crates/blight-repl/tests/goldens/: verdict_diff.txt
crates/blight-repl/tests/support/: mod.rs
docs/: benchmarks-game.md  blight-spec.md  c1-uncurry-investigation.md  cookbook.md  design-a3b-boxed-arrays.md  design-code-mobility.md  design-rc-reuse.md  design-wave4-gobars.md  implementation.md  metatheory-mechanized.md  metatheory.md  performance-guide.md  performance.md  research-frontier.md  roadmap-post-m6.md  roadmap-v0.1.md  roadmap.md  soundness-2026-07-07.md  soundness-2026-07-08.md  soundness-audit-2026-07-03.md  testing.md  tutorial.md
editors/vscode-blight/: .vscodeignore  README.md  blight-0.1.1.vsix  language-configuration.json  package-lock.json  package.json  tsconfig.json
examples/: README.md  ackermann.bl  ackermann_total.bl  actor_pingpong.bl  array_scratch.bl  ascii_box.bl  bench_sum.bl  boxed_array_scratch.bl  bytes_scratch.bl  caesar.bl  calculator.bl  clock_scratch.bl  collatz_steps.bl  containers.bl  echo.bl  effect_nontail.bl  effect_parser.bl  effects_demo.bl  either_compute.bl  elim_accum.bl  elim_linear.bl  equations.bl  f64_scratch.bl  factorial.bl  fib.bl  file_roundtrip.bl  fizzbuzz.bl  flat_esc.bl  flat_pair.bl  float_arith.bl  foreign_answer.bl  functor.bl  gcd.bl  graphics_scratch.bl  greet.bl  hashmap_lookup.bl  hello_nat.bl  hello_string.bl  hofold.bl  int_arith.bl  (+40 more)
examples/game/: guess.bl
examples/package/: main.bl  spore.toml
fuzz/: Cargo.toml
fuzz/fuzz_targets/: elab.rs  kernel.rs  reader.rs
mechanization/: .gitignore  BlightMeta.lean  README.md  lake-manifest.json  lakefile.toml
mechanization/BlightMeta/: Calculus.lean  Dependent.lean  Effects.lean  Grade.lean  GradeSkeleton.lean  Progress.lean  Reducibility.lean  Substitution.lean  Universe.lean  Usage.lean  Weakening.lean
playground/: build.sh  index.html  playground.js  smoke.mjs  worker.js
(+69 files in other folders)
