[workspace]
resolver = "2"
members = [
    "crates/blight-kernel",
    "crates/blight-recheck",
    "crates/blight-elab",
    "crates/blight-codegen",
    "crates/blight-prelude-embed",
    "crates/blight-repl",
    "crates/blight-lsp",
    "crates/blight-net",
    "crates/blight-playground",
]
# The cargo-fuzz crate is a separate, nightly-only package (libFuzzer); keep it out of the normal
# `--workspace` build so `cargo build`/`cargo test` on stable never touch it.
exclude = ["fuzz"]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT OR Apache-2.0"
rust-version = "1.96"
