[package]
name = "blight-repl"
description = "The `blight` REPL binary (untrusted): read, elaborate, check, report."
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "blight"
path = "src/main.rs"

[dependencies]
blight-kernel = { path = "../blight-kernel" }
blight-elab = { path = "../blight-elab" }
blight-codegen = { path = "../blight-codegen" }
blight-recheck = { path = "../blight-recheck" }

[features]
default = []
# Enable the native `blight build` subcommand (requires a system LLVM 18 + clang; see
# blight-codegen). Without this feature the binary is the REPL/checker only.
llvm = ["blight-codegen/llvm"]
